@@ -1,3 +1,9 @@
+2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* ConsiderUsingStaticTypeRule.cs: New. Rule that warn if a type 
+	could be changed into a static type. This rule is 2.0+ specific.
+	* Makefile.am: Add rule and test to the build.
+
 2008-07-08  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Makefile.am: Rebuild if the framework has changed.
